# at_server

./: .gitignore  CONTRIBUTING.md  Observable_Secondary.md  README.md  add-dependency-overrides.py  add_dependency_overrides.py  args_example.dart  melos.yaml  out.yml  pubspec.yaml
.github/: dependabot.yaml  dependabot.yml
at_end2end_test/: CHANGELOG.md  README.md  pubspec.yaml
at_functional_test/: README.md  (+2 more)
tools/: .gitignore  add_dependency_overrides.py  pyproject.toml  requirements.txt
tools/build_secondary/: Dockerfile  Dockerfile.canary_to_prod  Dockerfile.observe
tools/build_virtual_environment/install_PKAM_Keys/: README.md  pubspec.yaml
tools/build_virtual_environment/ve/: Dockerfile  Dockerfile.canary_to_vip  Dockerfile.vip
tools/build_virtual_environment/ve_base/: Dockerfile
tools/build_virtual_environment/ve_base/contents/atsign/root/certs/: cert.pem  fullchain.pem  privkey.pem
tools/build_virtual_environment/ve_base/contents/atsign/secondary/base/certs/: cert.pem  fullchain.pem  privkey.pem
tools/build_virtual_environment/ve_base/contents/atsign/secondary/base/config/: config.yaml
tools/build_virtual_environment/ve_base/contents/etc/supervisor/conf.d/: 20_redisload.conf  30_root.conf
tools/build_virtual_environment/ve_base/contents/tmp/setup/: TEMPLATE.conf  createConf  create_demo_accounts.sh
tools/cicd1/: update_image.sh
tools/cicd2/: update_image.sh
tools/run_locally/scripts/macos/: at_redis  at_rmkeys  at_root  at_server
tools/scripts/: staging_atsign_info.sh  staging_root_lookup.sh
tools/virtualenv/: docker-compose.yaml
(+517 files in other folders)
