[tool.poetry]
name = "at-server-tools"
version = "0.1.0"
description = ""
authors = ["Chris Swan <@cpswan>"]
readme = "README.md"
packages = [{include = "at_server_tools"}]

[tool.poetry.dependencies]
python = "^3.8"
"ruamel.yaml" = "0.17.35"
requests = "2.31.0"
dnspython = "2.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
