[tool.poetry]
name = "at-server-tools"
version = "0.1.0"
description = ""
authors = ["Chris Swan <@cpswan>"]
readme = "README.md"
packages = [{include = "at_server_tools"}]

[tool.poetry.dependencies]
python = "^3.8"
requests = "2.31.0"
dnspython = "2.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
